--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,7 @@ gemfile: "this/does/not/exist"
 rvm:
   - "1.8.7"
   - "2.0.0"
+notificarions:
+  email:
+    on_success: change
+    on_failure: change
